@startuml collision-system

' ============================================================================
' collision system package - collision detection and resolution
' ============================================================================
' this diagram focuses on the collision subsystem, showing how entities
' with collision capabilities are detected and resolved each frame using
' a simple observer pattern for collision responses
' ============================================================================

' styling
skinparam classBackgroundColor<<interface>> #E3F2FD
skinparam classBackgroundColor<<abstract>> #FFF9C4
skinparam classBackgroundColor<<manager>> #FFE0B2
skinparam classBackgroundColor<<concrete>> #E8F5E9
skinparam classBackgroundColor<<external>> #EEEEEE
skinparam classBorderColor #424242
skinparam arrowColor #424242
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 70

' ============================================================================
' collision interface
' ============================================================================

interface ICollidable <<interface>> {
  + getBounds(): Rectangle
  + onCollision(other: ICollidable): void
}

note right of ICollidable
  **collision capability**

  contract:
  - getBounds(): returns bounding box for detection
  - onCollision(): callback when collision detected

  design:
  - observer pattern for collision response
  - entity decides its own collision behaviour
  - decoupled from collision detection logic

  typical implementation:
  {
    public Rectangle getBounds() {
      float[] pos = transform.getPosition();
      float[] size = transform.getSize();
      return new Rectangle(pos[0], pos[1],
                          size[0], size[1]);
    }

    public void onCollision(ICollidable other) {
      // custom response logic
      if (other instanceof EnemyEntity) {
        takeDamage();
      } else if (other instanceof PowerUpEntity) {
        gainPower();
      }
    }
  }

  benefits:
  - flexible collision responses
  - type-safe collision handling
  - testable collision logic
end note

' ============================================================================
' collision detector
' ============================================================================

class CollisionDetector <<concrete>> {
  + checkCollision(a: ICollidable, b: ICollidable): boolean
}

note bottom of CollisionDetector
  **collision detection algorithm**

  responsibilities:
  - detects overlapping bounding boxes
  - uses libgdx Rectangle.overlaps()
  - stateless utility class

  algorithm:
  {
    public boolean checkCollision(
        ICollidable a, ICollidable b) {
      Rectangle boundsA = a.getBounds();
      Rectangle boundsB = b.getBounds();
      return boundsA.overlaps(boundsB);
    }
  }

  characteristics:
  - simple aabb collision
  - no spatial partitioning (brute force)
  - sufficient for small entity counts

  potential enhancements:
  - quadtree spatial partitioning
  - swept collision detection
  - custom collision shapes
end note

' ============================================================================
' collision manager
' ============================================================================

class CollisionManager <<manager>> {
  - collidables: Array<ICollidable>
  - detector: CollisionDetector
  + registerCollidable(collidable: ICollidable): void
  + unregisterCollidable(collidable: ICollidable): void
  # onUpdate(deltaTime: float): void
  - detectAndResolve(): void
}

note left of CollisionManager
  **collision orchestrator**

  responsibilities:
  - manages collection of collidable entities
  - detects collisions each frame
  - triggers collision callbacks

  update cycle:
  1. detectAndResolve():
     a. nested loop over all collidables (O(n²))
     b. for each pair (i, j where j > i):
        - check collision with detector
        - if colliding:
          * call a.onCollision(b)
          * call b.onCollision(a)

  registration:
  - entities register when spawned
  - entities unregister when despawned
  - dynamic collection updates

  design notes:
  - extends UpdatableManager (lifecycle + update)
  - owns CollisionDetector instance
  - observers notified via callbacks
  - stateless detection (no collision history)
end note

' ============================================================================
' manager base classes (from engine core)
' ============================================================================

abstract Manager <<abstract>> {
  - initialised: boolean
  + init(): void {final}
  + shutdown(): void {final}
  # onInit(): void
  # onShutdown(): void
  + isInitialised(): boolean
}

abstract UpdatableManager <<abstract>> {
  + update(deltaTime: float): void {final}
  # onUpdate(deltaTime: float): void {abstract}
}

' ============================================================================
' relationships
' ============================================================================

CollisionManager --|> UpdatableManager : extends
CollisionManager *-- CollisionDetector : owns
CollisionManager o-- "many" ICollidable : manages

CollisionDetector ..> ICollidable : uses

UpdatableManager --|> Manager : extends

' ============================================================================
' usage example
' ============================================================================

note as UsageExample
  **usage example**

  {
    // create collision manager
    CollisionManager collisionManager = new CollisionManager();
    collisionManager.init();

    // create collidable entity
    class Player extends Entity implements ICollidable {
      private Transform2D transform;

      public Rectangle getBounds() {
        float[] pos = transform.getPosition();
        float[] size = transform.getSize();
        return new Rectangle(pos[0], pos[1],
                            size[0], size[1]);
      }

      public void onCollision(ICollidable other) {
        if (other instanceof Enemy) {
          System.out.println("hit by enemy!");
          health -= 10;
        } else if (other instanceof Coin) {
          System.out.println("collected coin!");
          score += 100;
        }
      }
    }

    // register entities
    Player player = new Player();
    Enemy enemy = new Enemy();
    Coin coin = new Coin();

    collisionManager.registerCollidable(player);
    collisionManager.registerCollidable(enemy);
    collisionManager.registerCollidable(coin);

    // game loop
    while (running) {
      float deltaTime = getDeltaTime();
      collisionManager.update(deltaTime);
      // collisions detected and callbacks invoked
    }

    // cleanup
    collisionManager.unregisterCollidable(player);
    collisionManager.shutdown();
  }
end note

' ============================================================================
' collision detection algorithm
' ============================================================================

note as DetectionAlgorithm
  **collision detection algorithm**

  {
    private void detectAndResolve() {
      int size = collidables.size;

      // nested loop: check all pairs
      for (int i = 0; i < size - 1; i++) {
        ICollidable a = collidables.get(i);

        for (int j = i + 1; j < size; j++) {
          ICollidable b = collidables.get(j);

          // detect collision
          if (detector.checkCollision(a, b)) {
            // notify both entities
            a.onCollision(b);
            b.onCollision(a);
          }
        }
      }
    }
  }

  complexity:
  - time: O(n²) where n = entity count
  - space: O(1) no additional storage

  optimisation opportunities:
  - spatial partitioning (quadtree, grid)
  - broad phase / narrow phase
  - sleeping entities (static objects)
  - collision layers/masks
end note

' ============================================================================
' design patterns summary
' ============================================================================

note as DesignPatterns
  **design patterns in collision system**

  1. **observer pattern**
     - ICollidable.onCollision() as observer
     - CollisionManager as subject
     - entities notified of collisions

  2. **strategy pattern**
     - onCollision() as strategy
     - each entity implements custom response
     - flexible collision behaviours

  3. **template method pattern**
     - UpdatableManager.update() calls onUpdate()
     - onUpdate() calls detectAndResolve()
     - consistent update lifecycle

  4. **separation of concerns**
     - CollisionDetector: detection logic
     - CollisionManager: orchestration
     - ICollidable: response logic

  benefits:
  - decoupled collision logic
  - testable components
  - flexible entity responses
  - simple aabb detection
  - extensible detection algorithms
end note

@enduml
